# lorad

./: LICENSE  README.md  lorad-simple.py  lorad.py  loradt.py  phiseries.py  test
deploy/: _readme.txt  conf-byboth-gss-template.txt  conf-byboth-hpd-template.txt  conf-byboth-lorad-template.txt  conf-byboth-lorad2-template.txt  conf-byboth-ss-template.txt  conf-bycodon-gss-template.txt  conf-bycodon-hpd-template.txt  conf-bycodon-lorad-template.txt  conf-bycodon-lorad2-template.txt  conf-bycodon-ss-template.txt  conf-bygene-gss-template.txt  conf-bygene-hpd-template.txt  conf-bygene-lorad-template.txt  conf-bygene-lorad2-template.txt  conf-bygene-ss-template.txt  conf-unpart-gss-template.txt  conf-unpart-hpd-template.txt  conf-unpart-lorad-template.txt  conf-unpart-lorad2-template.txt  conf-unpart-ss-template.txt  deploy.py  gtrg-31taxa.tre  gtrg-32taxa.tre  rev-byboth-template.txt  rev-bycodon-template.txt  rev-bygene-template.txt  rev-unpart-template.txt  slurm-gss-template.txt  slurm-hpd-template.txt  slurm-lorad-template.txt  slurm-rev-template.txt  slurm-template.txt  summary.py  toggle-regression.py
deploy-kikihia/: S1679.nex  _readme.txt  conf-byboth-ghm-template.txt  conf-byboth-ghme-template.txt  conf-byboth-gss-template.txt  conf-byboth-lorad-template.txt  conf-bycodon-ghm-template.txt  conf-bycodon-ghme-template.txt  conf-bycodon-gss-template.txt  conf-bycodon-lorad-template.txt  conf-bygene-ghm-template.txt  conf-bygene-ghme-template.txt  conf-bygene-gss-template.txt  conf-bygene-lorad-template.txt  conf-unpart-ghm-template.txt  conf-unpart-ghme-template.txt  conf-unpart-gss-template.txt  conf-unpart-lorad-template.txt  coverage-series-example.sh  deploy.py  epideploy.sh  go-example.sh  go-template.sh  gtrg-31taxa.tre  loradml-byboth-logtransformed.conf  loradml-byboth-untransformed.conf  loradml-bycodon-logtransformed.conf  loradml-bycodon-untransformed.conf  loradml-bygene-logtransformed.conf  loradml-bygene-untransformed.conf  loradml-unpart-logtransformed.conf  loradml-unpart-untransformed.conf  pickseed.py  rev-byboth-template.txt  rev-bygene-template.txt  rev-unpart-template.txt  slurm-ghm-template.txt  slurm-ghme-template.txt  slurm-gss-template.txt  slurm-lorad-template.txt  (+4 more)
deploy-protosiphon/: _readme.txt  deploy.py  epideploy.sh  go-template.sh  lorad-3gtri-template.conf  lorad-3gtrig-template.conf  lorad-3jc-template.conf  lorad-gtr-template.conf  lorad-gtri-template.conf  lorad-gtrig-template.conf  lorad-jci-template.conf  lorad-jcig-template.conf  lorad-template.conf  loradml-gtr.conf  loradml-jci.conf  slurm-template.sh  submit-all-template.sh
deploy-protosiphon/gproto/: filter.py  go.sh  goloradml.sh
deploy-protosiphon/gproto/g1/3GTR/: s.sh
deploy-protosiphon/gproto/g1/3GTRG/: lorad.conf  s.sh
deploy-protosiphon/gproto/g1/3GTRI/: s.sh
deploy-protosiphon/gproto/g1/3JC/: s.sh
deploy-protosiphon/gproto/g1/3JCG/: lorad.conf  loradml.conf
deploy-protosiphon/gproto/g1/3JCI/: loradml.conf  s.sh
deploy-protosiphon/gproto/g1/3JCIG/: lorad.conf
deploy-protosiphon/gproto/g1/GTR/: s.sh
deploy-protosiphon/gproto/g1/GTRG/: loradml.conf  s.sh
deploy-protosiphon/gproto/g1/GTRI/: s.sh
deploy-protosiphon/gproto/g1/GTRIG/: loradml.conf
deploy-protosiphon/gproto/g1/JC/: lorad.conf
deploy-protosiphon/gproto/g1/JCG/: lorad.conf  loradml.conf  s.sh
deploy-protosiphon/gproto/g2/: lorad.conf  summary.py
deploy-protosiphon/gproto/g2/3GTR/: lorad.conf
deploy-protosiphon/gproto/g2/3GTRIG/: loradml.conf
deploy-protosiphon/gproto/g2/3JCI/: lorad.conf
deploy-protosiphon/gproto/g2/JC/: s.sh
deploy-protosiphon/gproto/g2/JCI/: s.sh
deploy-protosiphon/gproto/g2/JCIG/: loradml.conf  s.sh
deploy-protosiphon/gproto/g3/: loradml-all.sh  submit-all.sh
deploy-protosiphon/gproto/g3/3GTR/: loradml.conf
deploy-protosiphon/gproto/g3/3GTRG/: loradml.conf
deploy-protosiphon/gproto/g3/3GTRI/: loradml.conf
deploy-protosiphon/gproto/g3/3GTRIG/: s.sh
deploy-protosiphon/gproto/g3/3JC/: loradml.conf
deploy-protosiphon/gproto/g3/3JCG/: s.sh
deploy-protosiphon/gproto/g3/3JCIG/: loradml.conf  s.sh
deploy-protosiphon/gproto/g3/GTRG/: lorad.conf
deploy-protosiphon/gproto/g3/GTRI/: loradml.conf
deploy-protosiphon/gproto/g3/GTRIG/: s.sh
deploy-protosiphon/gproto/g3/JC/: loradml.conf
deploy-protosiphon/gproto/g3/common/: frtmle.tre
k80example/: _readme.txt  k80lorad.py  loradml-jc.conf  loradml.conf
src/: asrv.hpp  chain.hpp  conditional_clade_store.hpp  conditionals.hpp  data.hpp  datatype.hpp  debug_stuff.hpp  dirichlet_updater.hpp  edge_length_updater.hpp  edge_proportion_updater.hpp  exchangeability_updater.hpp  gamma_ratevar_updater.hpp  gamma_shape_updater.hpp  genetic_code.hpp  go.sh  likelihood.hpp  lorad-fixed-topol.conf  lorad.conf  lorad.hpp  lot.hpp  main.cpp  meson.build  meson.build.aam  meson.build.aam.hpc  meson.build.pol  meson.build.polhpc  model.hpp  node.hpp  omega_updater.hpp  output_manager.hpp  partition.hpp  pinvar_updater.hpp  polytomy_updater.hpp  qmatrix.hpp  s.sh  split.hpp  statefreq_updater.hpp  strom.hpp  subset_relrate_updater.hpp  test.sh  (+8 more)
